# cpp-programming

./: CMakeLists.txt
long_arithmetic/: CMakeLists.txt  long_integer.cpp  long_integer.h  long_integer_test.cpp  main.cpp
long_arithmetic/include/: expression_evaluator.h  long_integer.h
long_arithmetic/src/: expression_evaluator.cpp  long_integer.cpp  main.cpp
long_arithmetic/tests/: expression_evaluator_test.cpp  long_integer_test.cpp  test_expressions.h
